--- a/html/styles.css
+++ b/html/styles.css
@@ -268,7 +268,7 @@ button, input, li {
     flex-direction: row;
     justify-content: space-between;
     padding: 24px;
-    gap: 32px;
+    gap: 24px;
 }
 
 .leftControl, .rightControl {
@@ -284,6 +284,8 @@ button, input, li {
 
 .rightControl {
     width: 60vw;
+    max-height: 100vh;
+    gap: 8px;
 }
 
 .exitButton {
@@ -320,6 +322,7 @@ button, input, li {
     width: 100%;
     border: 4px solid white;
     border-radius: 12px;
+    box-sizing: border-box;
 }
 
 .leaderboardList {
@@ -412,16 +415,32 @@ button, input, li {
     font-size: 1rem;
 }
 
+.chatButton {
+    background-image: url(images/send_arrow.svg);
+    background-color: transparent;
+    border: none;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    cursor: pointer;
+    height: 24px;
+    width: 32px;
+    margin: auto 0;
+}
+
 .wordGrid {
     display: grid;
     grid-template-columns: repeat(20, 1fr);
-    grid-gap: 2px;
+    /* grid-gap: 2px; */
     border: 5px solid black;
     height: 100%;
-    width: auto;
+    width: fit-content;
+    margin: auto;
+    aspect-ratio: 1/1;
 }
 
 .gridItem {
+    box-sizing: border-box;
     background-color: white;
     color: black;
     font-size: 1.5rem;
@@ -430,9 +449,10 @@ button, input, li {
     align-items: center;
     user-select: none;
     cursor: pointer;
-    box-sizing: border-box;
     background-clip: padding-box;
     aspect-ratio: 1/1;
+    border: 1px solid black;
+    max-height: 32px;
 }
 
 .wordBank {
@@ -442,12 +462,13 @@ button, input, li {
     background-color: white;
     border: 5px solid black;
     box-sizing: border-box;
-    padding: 24px 16px;
-    height: 128px;
+    padding: 8px;
+    height: auto;
     border-radius: 12px;
 }
 
 .wordBank p {
     color: black;
-
+    margin: 0;
+    padding: 8px;
 }
