--- a/html/styles.css
+++ b/html/styles.css
@@ -58,7 +58,7 @@ button, input, li {
     align-items: center;
 }
 
-#landingScreen input[type=text] {
+.usernameInput {
     background-color: #D9D9D9;
     width: 275px;
     height: 50px;
@@ -94,6 +94,14 @@ button, input, li {
 .usernameSubmit:disabled {
     color: #343434;
     cursor: default;
+}
+
+.errorMessage {
+    display: none;
+    color: #FF0000;
+    font-size: 1rem;
+    text-align: center;
+    margin: 14px 0 8px 0;
 }
 
 /*--- LOBBY ---*/
