--- a/html/styles.css
+++ b/html/styles.css
@@ -11,7 +11,7 @@ body {
     margin: 0;
 }
 
-#landingScreen, #lobbyScreen, #gameScreen {
+#landingScreen, #lobbyScreen, #gameScreen, #readyScreen {
     width: 100vw;
     height: 100vh;
     box-sizing: border-box;
@@ -195,7 +195,7 @@ button, input, li {
 }
 
 .gameListItem {
-    background-color: #2a2a9d;
+    background-color: #5067E6;
     padding: 24px;
     border-radius: 12px;
     cursor: pointer;
@@ -205,9 +205,13 @@ button, input, li {
     font-size: 1.5rem;
 }
   
-.gameListItem:hover, .gameListItem:focus {
+.gameListItem:hover {
     outline: none;
     background-color: #3a3abf;
+}
+
+.gameSelected {
+    background-color: #1E3CE6;
 }
 
 .allTimeList {
@@ -268,6 +272,79 @@ button, input, li {
     width: 14px;
 }
 
+
+/*--- READY SCREEN ---*/
+#readyScreen {
+    padding: 32px 40px;
+}
+
+#readyScreen h1 {
+    font-size: 3rem;
+    font-weight: 700;
+}
+
+#readyScreen h2 {
+    font-size: 3rem;
+    font-weight: 500;
+}
+
+.readyMiddle {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    justify-content: center;
+    align-items: center;
+}
+
+.joinedPlayers {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    margin-left: 128px;
+}
+
+.joinedPlayer {
+    display: flex;
+    gap: 56px;
+    align-items: center;
+}
+
+.playerBubble {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    color: white;
+    height: 96px;
+    width: 50vw;
+    border-radius: 48px;
+}
+
+.readyStatus {
+    background-color: #888888;
+    height: 80px;
+    width: 80px;
+    border-radius: 70px;
+}
+
+
+.readyButton {
+    color: white;
+    background-color: transparent;
+    border: 4px solid #00FF1A;
+    border-radius: 24px;
+    padding: 8px 32px;
+    font-size: 40px;
+    cursor: pointer;
+}
+
+.readyButton:hover {
+    background-color: #00FF1A;
+}
+
+.ready {
+    background-color: #00FF1A;
+}
 
 /*--- GAME SCREEN ---*/
 
