--- a/html/styles.css
+++ b/html/styles.css
@@ -11,7 +11,7 @@ body {
     margin: 0;
 }
 
-#landingScreen, #lobbyScreen, #gameScreen, #readyScreen {
+#landingScreen, #lobbyScreen, #gameScreen, #readyScreen, #endGameScreen {
     width: 100vw;
     height: 100vh;
     box-sizing: border-box;
@@ -373,6 +373,12 @@ button, input, li {
     gap: 8px;
 }
 
+.leftControl .topControls {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 8px;
+}
+
 .exitButton {
     background-color: transparent;
     color: white;
@@ -452,6 +458,7 @@ button, input, li {
     justify-content: space-between;
     height: 24vh;
     background-color: #131317;
+    margin-top: 16px;
 }
 
 .messageList {
@@ -572,4 +579,60 @@ button, input, li {
     height: 2px;
     background-color: red;
     display: block;
+}
+
+.gameTimer {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.gameTimer p {
+    margin: 0 0 4px 0;
+}
+
+.gameTimerValue {
+    border: 4px solid white;
+    border-radius: 12px;
+    padding: 4px 12px;
+    font-size: 3rem;
+    font-weight: 500;
+}
+
+/*--- END GAME SCREEN ---*/
+
+#endGameScreen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.results {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 488px;
+}
+
+.results h1 {
+    font-size: 4rem;
+    font-weight: 700rem;
+    margin-bottom: 32px;
+}
+
+.backToLobby {
+    background-color: transparent;
+    width: 200px;
+    height: 58px;
+    border: 4px solid white;
+    border-radius: 12px;
+    color: white;
+    font-size: 1.5rem;
+    cursor: pointer;
+    margin-top: 64px;
+}
+
+.backToLobby:hover {
+    background-color: #1E3CE6;
 }
