--- a/html/styles.css
+++ b/html/styles.css
@@ -396,6 +396,19 @@ button, input, li {
     margin-bottom: 8px;
 }
 
+.gameStats {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    justify-content: center;
+}
+
+.gameStats p{
+    margin: 0;
+    font-size: 12px;
+    color: #858585;
+}
+
 .exitButton {
     background-color: transparent;
     color: white;
