--- a/html/styles.css
+++ b/html/styles.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
+html {
+    height: 100%;
+}
 body {
     display: block;
     background-color: #1E1F25;
@@ -7,6 +10,7 @@ body {
     font-family: "Ubuntu", sans-serif;
     font-style: normal;
     /*overflow: hidden;*/
+    height: 100%;
     font-size: 16px;
     margin: 0;
 }
@@ -487,7 +491,8 @@ button, input, li {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 24vh;
+    flex: 1;
+    max-height: 24vh;
     background-color: #131317;
     margin-top: 16px;
 }
